crates/cairo-m-ls/tests/e2e/hover/snapshots/e2e__hover__type_hover__hover_on_binary_expression.snap
---
source: crates/cairo-m-ls/tests/e2e/hover/type_hover.rs
expression: result
---
```cairo-m
b: felt
```
