crates/cairo-m-ls/tests/e2e/hover/snapshots/e2e__hover__type_hover__variable_type_hover.snap
---
source: crates/cairo-m-ls/tests/e2e/hover/type_hover.rs
expression: result
---
```cairo-m
x: felt
```
